# react-native-enhanced-pdf

./: .gitignore  DUAL_LICENSE_COMPLETE.md  INTEGRATION_GUIDE.md  LICENSE-COMMERCIAL.md  LICENSE-MIT.md  LICENSE-ORIGINAL.md  LOCAL_CACHE_PRO_TIP.md  NATIVE_LICENSE_SETUP.md  README.md  README_JSI.md  index.d.ts  index.js  netlify.toml  package.json  react-native-pdf-jsi.podspec  react-native-pdf.podspec
android/: build.gradle  gradle.properties
android/src/main/cpp/: Android.mk  CMakeLists.txt  PDFJSI.cpp  PDFJSI.h  PDFJSIBridge.cpp  PDFJSIModule.cpp
ios/RNPDFPdf/: Info.plist  LicenseVerifier.h  LicenseVerifier.m  PDFExporter.h  PDFExporter.m  PDFJSIManager.h  PDFJSIManager.m  PDFNativeCacheManager.h  PDFNativeCacheManager.m  PDFTextExtractor.h  PDFTextExtractor.m  RNPDFPdfView.h  RNPDFPdfView.mm  RNPDFPdfViewManager.h  RNPDFPdfViewManager.mm
netlify/functions/: validate.js
server/config/: database.sql
server/utils/: crypto.js  supabase.js
src/: EnhancedPdfView.js  PDFJSI.js  index.js
src/analytics/: index.js
src/analytics/components/: AnalyticsDashboard.js
src/analytics/hooks/: useAnalytics.js
src/bookmarks/: BookmarkManager.js
src/components/: AnalyticsPanel.jsx  BookmarkIndicator.jsx  BookmarkListModal.jsx  BookmarkModal.jsx  BottomSheet.jsx  ExportMenu.jsx  LoadingOverlay.jsx  OperationsMenu.jsx  SidePanel.jsx  Toast.jsx  Toolbar.jsx
src/examples/: PDFJSIExample.js
src/export/: ExportManager.js
src/hooks/: usePDFJSI.js
src/license/: LicenseManager.js  NativeLicenseVerifier.js  README.md  index.js
src/managers/: AnalyticsManager.js  CacheManager.js  ExportManager.js  FileManager.js
src/utils/: ErrorHandler.js  MemoizedAnalytics.js  PerformanceLogger.js  TestData.js
(+19 files in other folders)
